--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.5.13.3.jar=lib/itextpdf-5.5.13.3.jar
 file.reference.javax.servlet-api-4.0.1.jar=lib/javax.servlet-api-4.0.1.jar
 file.reference.mysql-connector-j-8.0.33.jar=lib/mysql-connector-j-8.0.33.jar
 file.reference.mysql-installer-web-community-8.0.42.0.msi=lib/mysql-installer-web-community-8.0.42.0.msi
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.mysql-installer-web-community-8.0.42.0.msi}:\
     ${libs.CopyLibs.classpath}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
-    ${file.reference.javax.servlet-api-4.0.1.jar}
+    ${file.reference.javax.servlet-api-4.0.1.jar}:\
+    ${file.reference.itextpdf-5.5.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
